<resources>
    <string name="app_name">Kitku</string>
    <string name="GOOGLE_API_KEY">AIzaSyC1iDEzMJVFxIhUz6locIHyt2IPV06mxtA</string>

    <string name="main_banner_slider_image">Banner Slider Kitku</string>

    <string name="main_content_desc_image_toolbar">Logo Kitku</string>
    <string name="main_message_choose_category">Pilih kategori yang anda inginkan</string>

    <string name="main_content_desc_vegetable_icon">Ikon Kategori Sayuran</string>
    <string name="main_content_desc_meat_icon">Ikon Kategori Daging, Unggas dan Telur</string>
    <string name="main_content_desc_fish_icon">Ikon Kategori Ikan</string>
    <string name="main_content_desc_wheat_icon">Ikon Kategori Beras dan Biji-bijian</string>
    <string name="main_content_desc_fastfood_icon">Ikon Kategori Makanan Siap Saji</string>
    <string name="main_content_desc_others_icon">Ikon Kategori Lainnya</string>

    <string name="main_title_vegetable_category">Sayur</string>
    <string name="main_title_meat_category">Daging, Unggas\ndan Telur</string>
    <string name="main_title_fish_category">Ikan</string>
    <string name="main_title_wheat_category">Beras dan Biji-bijian</string>
    <string name="main_title_fastfood_category">Makanan Siap Saji</string>
    <string name="main_title_others_category">Lainnya</string>

    <string name="botnav_title_home">Home</string>
    <string name="botnav_title_cart">Pesanan</string>
    <string name="botnav_title_partner">Mitra</string>
    <string name="botnav_title_user">Akun</string>

    <string name="fragmentlogin_email_text"><b>Email</b></string>
    <string name="fragmentlogin_password_text"><b>Password</b></string>
    <string name="fragmentlogin_message_1">Ayo login untuk dapat memesan bahan makanan yang anda inginkan</string>
    <string name="fragmentlogin_title_login">Login</string>
    <string name="fragmentlogin_button_title_login">Login Sekarang</string>
    <string name="fragmentlogin_message_2">Belum punya akun ?</string>
    <string name="fragmentlogin_action_toregister_text"><u>Daftar disini !</u></string>

    <string name="register_title">Register</string>
    <string name="register_name_text">Nama</string>
    <string name="register_email_text">Email</string>
    <string name="register_password_text">Password</string>
    <string name="register_address_text">Alamat</string>
    <string name="register_phonenumber_text">Nomor HP</string>
    <string name="register_button_title_register">Register sekarang</string>
    <string name="register_message_1">Ayo buat akun ada di Kitku untuk memudahkan anda untuk memesan bahan makanan yang anda inginkan</string>
    <string name="register_message_2">Sudah punya akun ?</string>
    <string name="register_action_tologin_text"><u>Masuk disini !</u></string>

    <string name="listitem_content_desc_image">Gambar Item</string>
    <string name="listitem_skeletonview_content_desc_image">Skeleton View Item Image</string>

    <string name="detailitem_item_content_desc_image">Detail Item, Item Image</string>

    <string name="orderlist_orderamount_title">Total Pesanan (X Item)</string>

    <string name="checkout_set_address_toolbar_title">Alamat</string>
    <string name="checkout_set_address_title">Kemana pesanan anda akan dikirim ?</string>
    <string name="checkout_set_address_name_hint">Nama Penerima</string>
    <string name="checkout_set_address_phone_hint">No. Telpon Penerima</string>
    <string name="checkout_set_address_address_hint">Alamat Penerima</string>
    <string name="checkout_set_address_set_map_title">Tentukan alamat anda disini !</string>
    <string name="checkout_set_address_button_title_go_to_gmap">Go To Google Map</string>
    <string name="checkout_set_address_button_title_save_address">Simpan Alamat</string>

    <string name="checkout_action_tovoucher_text"><u>Punya kode ? Masukkan disini !</u></string>
    <string name="checkout_action_to_changeaddress_text"><u>Ubah Alamat</u></string>

    <string name="dialog_buyitem_title">Barang sudah terpesan !</string>
    <string name="dialog_buyitem_description">Silahkan lihat di pesanan anda untuk membuat checkout pembayaran</string>
    <string name="dialog_buyitem_back_button_title">Kembali</string>
    <string name="dialog_buyitem_to_cart_button_title">Ke Pesanan</string>

    <string name="cart_toolbar_title">Pesanan</string>

    <string name="user_welcome_title">Selamat datang,</string>
    <string name="user_toolbar_title">Akun Anda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="beli_produk">Beli Produk</string>
    <string name="todo">TODO</string>
    <string name="ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="content_desc_image_item">Image Item</string>
    <string name="content_desc_remove_imagebutton">Remove Item</string>
    <string name="content_desc_add_imagebutton">Add Item</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_cart__map_">Map</string>
    <string name="txtComingSoon">Hai! kami dari Kitku selalu berusaha untuk memberi anda pelayanan terbaik yang bisa anda dapatkan di dalam platform ini. Maka dari itu, kami sedang mengembangkan fitur yang dapat memudahkan anda berada di dalam platform ini.</string>

    <string name="login"><u>Login</u></string>
    <string name="daftar"><u>Daftar</u></string>
    <string name="detail_item_price_before_text"><strike>Rp. 30.000,00</strike></string>


</resources>
