<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_roundedcorners">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_buyitem_title"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_buyitem_description"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="18dp">

        <Button
            android:id="@+id/buttonDialogDetail_Item_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="32dp"
            android:padding="8dp"
            android:text="@string/dialog_buyitem_back_button_title"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/all_button_roundedcorners_colorsecondary_solid"
            style="?attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonDialogDetail_Item_ToOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="10dp"
            android:text="@string/dialog_buyitem_to_cart_button_title"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/all_button_roundedcorners_colorprimary_solid"
            style="?attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>