<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/frameFragmentContainerLoginGoToUserDetailFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layoutLoginFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imgLogin1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/main_content_desc_image_toolbar"
                android:src="@drawable/ic_logo_kitku" />

            <TextView
                android:id="@+id/txtLogin1"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgLogin1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/fragmentlogin_message_1"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtLogin2"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLogin1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:gravity="center_horizontal"
                android:text="@string/fragmentlogin_title_login"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.design.card.MaterialCardView
                android:id="@+id/materialcardviewLoginEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLogin2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="12dp"
                card_view:strokeColor="@color/colorPrimary"
                card_view:strokeWidth="2dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:textColorHint="@color/colorSecondary">

                    <EditText
                        android:id="@+id/edittextLoginEmail"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="14dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/fragmentlogin_email_text"
                        android:inputType="textEmailAddress"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:id="@+id/materialcardviewLoginPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/materialcardviewLoginEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="12dp"
                card_view:strokeColor="@color/colorPrimary"
                card_view:strokeWidth="2dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:textColorHint="@color/colorSecondary">

                    <EditText
                        android:id="@+id/edittextLoginPassword"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="14dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/fragmentlogin_password_text"
                        android:inputType="textPassword"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

            </android.support.design.card.MaterialCardView>

            <Button
                android:id="@+id/buttonfragmentlogin_Login"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/materialcardviewLoginPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:background="@drawable/all_button_roundedcorners_colorprimary_solid"
                android:text="@string/fragmentlogin_button_title_login"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLogin3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonfragmentlogin_Login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/fragmentlogin_message_2"
                android:textColor="@color/colorBlack"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textviewLoginGoToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLogin3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/fragmentlogin_action_toregister_text"
                android:textColor="@color/colorSecondary"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</FrameLayout>