<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComingSoonFragment">

    <ImageView
        android:id="@+id/imgComingSoon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:src="@drawable/ic_logo_kitku"/>

    <TextView
        android:id="@+id/txtComingSoon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgComingSoon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="Coming Soon!"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtComingSoon2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtComingSoon1"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/txtComingSoon"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/layoutComingSoonCTA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtComingSoon2"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/txtComingSoon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Dapatkan informasi terbaru mengenai fitur ini :"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtComingSoonToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtComingSoon3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtComingSoon5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtComingSoonToLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="Belum punya akun ?"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtComingSoonToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtComingSoon5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/daftar"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </RelativeLayout>

</RelativeLayout>